--- a/myanimelist/pom.xml
+++ b/myanimelist/pom.xml
@@ -63,6 +63,11 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>io.hypersistence</groupId>-->
+<!--			<artifactId>hypersistence-utils-hibernate-5</artifactId>-->
+<!--			<version>3.5.0</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
